style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  color: white;
  background-color: #0096c7;
  display: flex;
  flex-direction: column;
  align-items: center;

  max-width: 2000px;
  margin: auto;
}

i {
  font-size: 1.5em;
}

main,
header,
nav,
footer,
section,
div {
  width: 100%;
}

a {
  text-decoration: none;
}

h1,
h2,
h4 {
  white-space: nowrap;
}

.large-font {
  font-size: 1.5em;
}

.bold {
  font-weight: bold;
}

.left-reveal {
  position: relative;
  transform: translateX(-500px);
  opacity: 0;
  transition: 1.5s all ease;
}

.right-reveal {
  position: relative;
  transform: translateX(500px);
  opacity: 0;
  transition: 1.5s all ease;
}

.left-reveal.active,
.right-reveal.active {
  transform: translateX(0);
  opacity: 1;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 100px;
}

nav {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: 45px;
  padding: 20px 0;
}

nav a {
  color: orange;
  position: relative;
  font-size: 1.2em;
}

nav a::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: -2px;
  width: 0;
  height: 2px;
  background-color: yellow;
  transition: width 0.6s ease-in-out;
}

nav a:hover {
  color: yellow;
}

nav a.active::after {
  width: 100%;
}

.sticky {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  background: rgba(0, 0, 0, 0.5);
  z-index: 3;
}

section {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 25px 0;
  position: relative;
}

.section-header {
  max-width: 2000px;
  text-align: center;
  margin: 0 0 25px 0;
  position: relative;
}

.line {
  border: 5px solid white;
  position: absolute;
  top: 50%;
  width: 100%;

  margin: 0 auto;
}

.content {
  display: flex;
  justify-content: center;
  gap: 30px;
}

.text-box {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.about {
  max-width: 500px;
  padding: 0 35px;
  gap: 15px;
}

.project-text {
  max-width: 400px;
  background-color: whitesmoke;
  color: black;
  justify-content: space-between;
  padding: 20px;
}

.project-text p {
  font-size: 1.2em;
}

.content-footer {
  display: flex;
  justify-content: flex-end;
  border-top: 2px solid black;
  padding: 10px 0 0 0;
  gap: 5px;
}

#projects {
  /* background-color: #f76c6c; */
  background-color: #00b4d8;
}

.project {
  margin: 0 0 100px 0;
}

.project-text-box {
  max-width: 400px;
}

.portrait {
  max-width: 300px;
  object-fit: cover;
}

.project-img {
  max-width: 500px;
  object-fit: cover;
}

h2,
img,
.project-text {
  border-radius: 10px;
}

.svg {
  width: 24px;
}

h2 {
  /* margin: 0 0 25px 0; */
  position: relative;
  z-index: 1;
  margin: 0 auto;
  font-size: 3em;
  background-color: #ffd60a;
  padding: 20px;
  width: min-content;
}

h3 {
  text-align: center;
  font-size: 2em;
}

h4 {
  font-size: 3.5em;
}

#contact {
  /* background-color: #ffafcc; */
  background-color: #48cae4;
  color: black;
}

